# potential-uwsgi-bug

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.Dockerfile  nginx.conf  pyproject.toml
uwsgibug/: flask_app.py  manage.py
uwsgibug/uwsgibug/: asgi.py  settings.py  urls.py  wsgi.py
